// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoDataCard props button 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingLarge euiCard euiCard--centerAligned css-1adt3jz-euiPanel-grow-m-l-plain-hasShadow-EuiCard"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title css-1mr6cet-euiTitle-s"
      id="generated-idTitle"
    >
      <span
        class="euiScreenReaderOnly"
      >
        Card title
      </span>
    </span>
    <div
      class="euiText euiCard__description css-1vkrgyt-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Description
      </p>
    </div>
  </div>
  <div
    class="euiCard__footer"
  >
    <button
      class="euiButton euiButton--primary euiButton--fill"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          Button
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`NoDataCard props extends EuiCardProps 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingLarge euiCard euiCard--centerAligned custom_class css-1adt3jz-euiPanel-grow-m-l-plain-hasShadow-EuiCard"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title css-1mr6cet-euiTitle-s"
      id="generated-idTitle"
    >
      <span
        class="euiScreenReaderOnly"
      >
        Card title
      </span>
    </span>
    <div
      class="euiText euiCard__description css-1vkrgyt-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Description
      </p>
    </div>
  </div>
  <div
    class="euiCard__footer"
  >
    <button
      class="euiButton euiButton--primary euiButton--fill"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          Button
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`NoDataCard props href 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingLarge euiCard euiCard--centerAligned euiCard--isClickable css-1xmyfa3-euiPanel-grow-m-l-plain-hasShadow-isClickable-EuiCard"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title css-1mr6cet-euiTitle-s"
      id="generated-idTitle"
    >
      <a
        aria-describedby="generated-idDescription"
        class="euiCard__titleAnchor"
        href="#"
        rel="noreferrer"
      >
        <span
          class="euiScreenReaderOnly"
        >
          Card title
        </span>
      </a>
    </span>
    <div
      class="euiText euiCard__description css-1vkrgyt-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Description
      </p>
    </div>
  </div>
  <div
    class="euiCard__footer"
  >
    <button
      class="euiButton euiButton--primary euiButton--fill"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          Button
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`NoDataCard props isDisabled 1`] = `
<div
  class="euiPanel euiPanel--subdued euiPanel--paddingLarge euiCard euiCard--centerAligned euiCard-isDisabled css-97w5mt-euiPanel-grow-m-l-subdued-EuiCard"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title css-1mr6cet-euiTitle-s"
      id="generated-idTitle"
    >
      <button
        aria-describedby=" generated-idDescription"
        class="euiCard__titleButton"
        disabled=""
      >
        <span
          class="euiScreenReaderOnly"
        >
          Card title
        </span>
      </button>
    </span>
    <div
      class="euiText euiCard__description css-1vkrgyt-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Description
      </p>
    </div>
  </div>
</div>
`;

exports[`NoDataCard renders 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingLarge euiCard euiCard--centerAligned css-1adt3jz-euiPanel-grow-m-l-plain-hasShadow-EuiCard"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiCard__title css-1mr6cet-euiTitle-s"
      id="generated-idTitle"
    >
      <span
        class="euiScreenReaderOnly"
      >
        Card title
      </span>
    </span>
    <div
      class="euiText euiCard__description css-1vkrgyt-euiText-s"
      id="generated-idDescription"
    >
      <p>
        Description
      </p>
    </div>
  </div>
  <div
    class="euiCard__footer"
  >
    <button
      class="euiButton euiButton--primary euiButton--fill"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          Card title
        </span>
      </span>
    </button>
  </div>
</div>
`;
